CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( natnetlinux )

SET( PROJECT_SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
SET( PROJECT_BINARY_ROOT ${CMAKE_CURRENT_BINARY_DIR} )

# Add custom CMakeModules path
#SET( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules ${CMAKE_MODULE_PATH} )

# Put executables in bin/
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")

INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}/include" )

FIND_PACKAGE( Boost REQUIRED system thread )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )

# Descend into subdirectories
ADD_SUBDIRECTORY( doc )
ADD_SUBDIRECTORY( include )
ADD_SUBDIRECTORY( src )
